added frontend project

--- a/index.html
+++ b/index.html
@@ -122,12 +122,10 @@
                         <h3>Chat Application</h3>
                         <p>
                             <ul>
-                                <li>Full-stack developer specializing in building scalable, high-performance payment solutions for the fintech industry. </li>
-                                <li>Redesigned and restructured the frontend codebase, transforming it into a scalable architecture, reducing development time by 60% for new payment gateway integrations.</li>
-                                <li>Developed and maintained high-performance RESTful APIs, optimized database schemas, and fine-tuned queries, significantly improving API performance and reducing latency.</li>
-                                <li>Led end-to-end ownership of the Gateways module in the Juspay Dashboard, enabling merchants to configure multiple payment gateways and select payment methods seamlessly.</li>
-                                <li>Provided on-call support for critical P0/Sev issues, collaborating with cross-functional teams (Product, Business, and Operations) to resolve incidents and ensure smooth payment processing.</li>
-                                <li>Tech Stack & Learnings: ReactJS, Haskell, Rescript, SQL, JavaScript.</li>
+                                <li>Built an online chat application using React, Node-Js, Express and MongoDB.</li>
+                                <li>This web enables users to engage in real time chat application along with features like display picture, emojis, user
+                                    registration, login and along with reset password feature.</li>
+                                <li> Implemented authentication and enhanced security through Bcrypt.</li>
                             </ul>
                         </p>
                     </div>
@@ -138,11 +136,11 @@
                         <h3>USER MANAGEMENT SYSTEM</h3>
                         <p>
                             <ul>
-                                <li>Worked in the Adaptive AUTOSAR and Linux Deployment Team, focusing on optimizing software deployment processes. </li>
-                                <li>Improved environment setup and teardown efficiency on Linux target machines by integrating them into SharedFeature, reducing redundancy and enhancing automation.</li>
-                                <li>Developed five key automation features, including Linux Distribution Installation, User Creation, Docker in WSL, OpenSSH Configuration, and ZIP Package Management, streamlining Windows machine setup for development and testing</li>
-                                <li>Led the migration of Debian-based Linux distributions to RPM-based systems, ensuring compatibility and improving deployment efficiency.</li>
-                                <li>Tech Stack & Learnings: Docker, C++, MATLAB, Linux, WSL.</li>
+                                <li>Designed and Implemented a robust User Management System using the MERN stack. </li>
+                                <li>Implemented User registration, login with secure authentication using JWT token and leveraged Mongoose for
+                                    database schema modeling.</li>
+                                <li>Developed an application with CRUD functionalities for customer data management, enhancing my database
+                                    skills.</li>
                             </ul>
                         </p>
                     </div>
@@ -150,12 +148,25 @@
                 
                 <div class="education-content">
                     <div class="content">
-                        <h3>FLIGHT DELAY PREDICTION</h3>
+                        <h3>FLIGHT DELAY PREDICTION (ML Project)</h3>
                         <p>
                             <ul>
                                 <li>Created a model which predicts whether a flight will experience delays or not using Machine Learning Algorithm.</li>
                                 <li>It includes Data Processing and Cleaning,Visualisation and Prediction which attained accuracy of 93%</li>
                                 <li>Tech Stack & Learnings: Machine Learning, Python, Pandas, Matplotlib</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            
+                <div class="education-content">
+                    <div class="content">
+                        <h3>SPRITE MOVEMENT</h3>
+                        <p>
+                            <ul>
+                                <li>Developed an interactive frontend web application for controlling a sprite's movement, rotation, size, color, and visibility using Javascript, Redux, and TailwindCSS.</li>
+                                <li>Implemented an action logging system to track user interactions, enabling users to replay actions based on a selected log entry.</li>
+                                <li>Designed an intuitive UI with real-time updates using Redux state management for a seamless user experience.</li>
                             </ul>
                         </p>
                     </div>
@@ -176,7 +187,7 @@
 
                 <div class="education-content">
                     <div class="content">
-                        <h3>SCORECARD - Course Project</h3>
+                        <h3>SCORECARD</h3>
                         <p>
                             <ul>
                                 <li>Performed data analysis on the commentary of a cricket match from Cricbuzz and generated a comprehensive scorecard with all features similar to Cricbuzz.</li>
