--- a/index.html
+++ b/index.html
@@ -79,13 +79,23 @@
                         <div class="year"><i class="bx bxs-calendar"></i>July 2024 - Present</div>
                         <h3> Software Engineer - JUSPAY</h3>
                         <p>
-                            <ul>
+                            <ul> 
+                                <li>Worked on the Gateways Module of the EC Dashboard, allowing merchants to configure multiple payment
+                                    gateways based on real-time availability</li>
                                 <li>Full-stack developer specializing in building scalable, high-performance payment solutions for the fintech industry. </li>
-                                <li>Redesigned and restructured the frontend codebase, transforming it into a scalable architecture, reducing development time by 60% for new payment gateway integrations.</li>
-                                <li>Developed and maintained high-performance RESTful APIs, optimized database schemas, and fine-tuned queries, significantly improving API performance and reducing latency.</li>
-                                <li>Led end-to-end ownership of the Gateways module in the Juspay Dashboard, enabling merchants to configure multiple payment gateways and select payment methods seamlessly.</li>
-                                <li>Provided on-call support for critical P0/Sev issues, collaborating with cross-functional teams (Product, Business, and Operations) to resolve incidents and ensure smooth payment processing.</li>
-                                <li>Tech Stack & Learnings: ReactJS, Haskell, Rescript, SQL, JavaScript.</li>
+                                <li>Designed a configurable Maker-Checker workflow in Haskell API middleware, enabling seamless collaboration
+                                    for critical operations. Built a system to store maker requests in the database and replay them for processing upon
+                                    approval, reducing human errors by 77%.</li>
+                                <li>Using Python, and AWS S3 Bucket, built a dynamic system to upload and store images/videos for gateway
+                                    keys, the S3 links generated were displayed to the merchants during configuration, reducing human errors by 99%</li>
+                                <li>Revamped the frontend architecture using ReactJS to support dynamic gateway configuration just via database
+                                    entries, replacing hardcoded logic and enabling a scalable, no-code setup process.</li>
+                                <li>Developed a Synchronous API to get the most recent Mandates and Payment Methods from gateways, ensuring consistent information across the payment gateway and Juspay EC-Dashboard, reducing transaction dropout rates
+                                    by 100%.</li>
+                                <li>Integrated Multiple Gatewyays into EC-Dashboard: Tabby, PineLabs Online, Airwallex, Payfort, TwoCTwop and ApplePay Native</li>
+                                <li> Enhanced Gateway Schema API to dynamically configure merchant fields with internal checks, editable options,
+                                and secure masking of sensitive keys like secrets, ensuring robust governance and data security.</li>
+                                <li>Tech Stack & Learnings: ReactJS, Haskell, Python, JavaScript, Java, Rescript, SQL.</li>
                             </ul>
                         </p>
                     </div>
@@ -215,7 +225,7 @@
             <div class="tech-category">
                 <h3>Technologies</h3>
                 <ul>
-                    <li>ReactJS, NodeJS, SQL, MongoDB, Linux, Docker(basics), ExpressJs, OOPS, OS, DBMS, Data Visualization  (Pandas, Matplotlib, Numpy) </li>
+                    <li>ReactJS, NodeJS, Java, Python, SQL, MongoDB, Linux, Docker(basics), ExpressJs, OOPS, OS, DBMS, Data Visualization  (Pandas, Matplotlib, Numpy) </li>
                 </ul>
             </div>
             <div class="tech-category">
